@@ -25,6 +25,9 @@ test program specifically designed to make the bug occur (by injecting random
 high-frequency YUV data into the compressor), it was reproducible only once in
 about every 25 million iterations.
 
+[6] Fixed a build issue on OS X PowerPC platforms (md5cmp failed to build
+because OS X does not provide the le32toh() and htole32() functions.)
+
 
 1.3.1
 =====
